package com.attendance.tracking.entity;

public enum AttendanceStatus {
    PRESENT,
    ABSENT,
    LATE,
    HALF_DAY
}
