---
title: Class Diagram - Attendance Service
---
classDiagram
    %% Entity
    class Attendance {
        -Long id
        -Long employeeId
        -LocalDateTime clockInTime
        -LocalDateTime clockOutTime
        -LocalDate date
        -AttendanceStatus status
        -BigDecimal workHours
        -String notes
        -LocalDateTime createdAt
        -validateTimes() void
        +onCreate() void
        +onUpdate() void
    }
    
    class AttendanceStatus {
        <<enumeration>>
        PRESENT
        ABSENT
        LATE
        HALF_DAY
    }
    
    %% DTOs
    class ClockInRequest {
        -Long employeeId
        -String notes
    }
    
    class ClockOutRequest {
        -Long employeeId
        -String notes
    }
    
    class AttendanceResponse {
        -Long id
        -Long employeeId
        -LocalDateTime clockInTime
        -LocalDateTime clockOutTime
        -LocalDate date
        -AttendanceStatus status
        -BigDecimal workHours
        -String notes
    }
    
    %% Repository
    class AttendanceRepository {
        <<interface>>
        +findById(Long id) Optional~Attendance~
        +findByEmployeeIdAndDate(Long employeeId, LocalDate date) Optional~Attendance~
        +findByDate(LocalDate date) List~Attendance~
        +findByEmployeeId(Long employeeId) List~Attendance~
        +save(Attendance attendance) Attendance
    }
    
    %% Service
    class AttendanceService {
        -AttendanceRepository attendanceRepository
        -AttendanceMapper attendanceMapper
        +clockIn(ClockInRequest request) AttendanceResponse
        +clockOut(ClockOutRequest request) AttendanceResponse
        +getDailyAttendance(LocalDate date) List~AttendanceResponse~
        +getEmployeeAttendance(Long employeeId) List~AttendanceResponse~
        +getTodayStatus(Long employeeId) AttendanceResponse
    }
    
    %% Controller
    class AttendanceController {
        -AttendanceService attendanceService
        +clockIn(ClockInRequest request) ResponseEntity~AttendanceResponse~
        +clockOut(ClockOutRequest request) ResponseEntity~AttendanceResponse~
        +getDailyAttendance(LocalDate date) ResponseEntity~List~
        +getEmployeeAttendance(Long employeeId) ResponseEntity~List~
        +getTodayStatus(Long employeeId) ResponseEntity~AttendanceResponse~
    }
    
    %% Mapper
    class AttendanceMapper {
        <<interface>>
        +toResponse(Attendance attendance) AttendanceResponse
        +toResponseList(List~Attendance~ attendances) List~AttendanceResponse~
    }
    
    %% Security
    class AdminOnly {
        <<annotation>>
    }
    
    class JwtAuthenticationFilter {
        -JwtUtil jwtUtil
        +doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain) void
    }
    
    %% Relationships
    Attendance --> AttendanceStatus : has
    AttendanceService --> AttendanceRepository : uses
    AttendanceService --> AttendanceMapper : uses
    AttendanceController --> AttendanceService : uses
    AttendanceController --> ClockInRequest : receives
    AttendanceController --> ClockOutRequest : receives
    AttendanceController --> AttendanceResponse : returns
    AttendanceController --> AdminOnly : annotated with
    AttendanceRepository --> Attendance : manages
    AttendanceMapper --> Attendance : maps from
    AttendanceMapper --> AttendanceResponse : maps to
